--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-firestore:23.0.1'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+//    implementation 'com.github.Flutterwave.rave-android:rave_presentation:2.1.39'
+    implementation 'com.github.flutterwave.rave-android:rave_android:2.1.39'
 }
