--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,13 @@
         android:theme="@style/Theme.UniPay"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.Register"
+            android:exported="true" />
+        <activity
+            android:name=".activities.Login"
+            android:exported="true" />
+        <activity
+            android:name=".activities.Dashboard"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
