--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
 
 //    implementation 'com.github.Flutterwave.rave-android:rave_presentation:2.1.39'
-//    implementation 'com.github.flutterwave.rave-android:rave_android:2.1.39'
+    implementation 'com.github.flutterwave.rave-android:rave_android:2.1.39'
 
     // volley
 //    implementation 'com.android.volley:volley:1.2.1'
