--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.UniPay"
         tools:targetApi="31">
         <activity
+            android:name=".activities.Transactions"
+            android:exported="false" />
+        <activity
             android:name=".activities.StudentView"
             android:exported="true" />
         <activity
